--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -13,11 +13,11 @@ institute:
 title-block-published: "Last updated"  
 date: now
 date-format: long
-format: 
+format: pdf
   # docx:
   #   reference-doc: "../templates/template.docx" # Insert path for the DOCX file
-  pdf:
-    template: "../templates/plos_latex_template.tex"
+  # pdf:
+  #   template: "../templates/plos_latex_template.tex"
 execute:
   echo: true
   warning: false
