Update label and caption in process diagram code chunk

--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -170,8 +170,11 @@ Research questions:
 -   To what extent were the topics and evolution thereof influenced by the exchange semester followed by the students?
 
     -   Use LDA clustering with 3 classes (corresponding to the three exchange universities) to see how well the clustering is aligned with where the student carried out their exchange semester. Use a confusion matrix to visualize the relation between real values and values assigned through clustering.
-    
-```{r process-diagram}
+  
+The research process (@fig-process-diagram)...
+
+```{r fig-process-diagram}
+#| fig-cap: Text mining process
 
 mermaid("
 graph LR
