Update topic model script with different Ks

--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -299,14 +299,15 @@ emu_lda_5 <- LDA(emu_dtm, k = 5, method="Gibbs",
                control = list(seed = 2023, iter = 500, verbose = 25))
 
 # Extract beta and theta statistics from LDA model
-beta <- posterior(emu_lda)$terms
-theta <- posterior(emu_lda)$topics 
+beta_5 <- posterior(emu_lda_5)$terms
+theta_5 <- posterior(emu_lda_5)$topics 
 
-# Preview 10 terms from each topic
-terms(emu_lda, 10)
+beta_k <- posterior(emu_lda_k)$terms
+theta_k <- posterior(emu_lda_k)$topics 
 
 # Add pseudo-names to topics based on the top 5 words in each topic
-topic_names <- name_topics(beta)
+topic_names_k <- name_topics(beta_k)
+topic_names_5 <- name_topics(beta_5)
 
 ```
 
@@ -316,24 +317,25 @@ topic_names <- name_topics(beta)
 # TODO Replace this with a table containing topics, documents, and theta
 #      sorted by theta in decreasing order
 # What is the dominant topic in each document?
-N = 82
-topic_prop_examples <- theta[1:N,]
-colnames(topic_prop_examples) <- str_sub(topic_names, 1, 40)
+N = 70
+topic_prop_examples <- theta_5[1:N,]
+colnames(topic_prop_examples) <- topic_names_5
 # TODO change to pivot_longer
 vizDataFrame <- melt(cbind(data.frame(topic_prop_examples), 
                            document = factor(str_sub(rownames(topic_prop_examples), 1, 20))), 
-                     variable.name = "topic", id.vars = "document")  
-ggplot(data = vizDataFrame, aes(topic, value), ylab = "proportion") + 
-  geom_bar(stat="identity") +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +  
-  coord_flip() +
-  facet_wrap(~ document, ncol = 5) +
-  theme(legend.position = "none")
-
-vizDataFrame |> 
+                     variable.name = "topic", id.vars = "document") |> 
   group_by(document) |> 
   mutate(value_max = max(value),
          topic_max = topic[value == value_max])
+ggplot(data = vizDataFrame, aes(topic, value, fill = topic_max), ylab = "proportion") + 
+  geom_bar(stat="identity") +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +  
+  coord_flip() +
+  facet_wrap(~ document, ncol = 10) +
+  theme(legend.position = "bottom") +
+  scale_fill_viridis_d(name = "Topic") +
+  labs(title = "Theses as distributions over topics",
+       subtitle = "Charts colored by the highest probability")
 
 ```
 
