--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -221,21 +221,66 @@ For analyses in which word-level tokens were used, stop words, i.e., common word
 
 ```{r stop-words}
 
-# TODO replace with cleaning steps including ngram concatenation
-# Add cleaned text column with removed stop words
-emu$text_clean <- emu$text_clean |>
-  str_remove_all(find_meta_stopwords(emu)) |> 
-  str_remove_all(urbanism_stopwords(
-    add_stopwords = c("emu", "european postgraduate master in urbanism", "tu delft", "ku leuven", "upcs barcelona", "iuav venice", 
-                      "space", "spatial", "spaces", "plan", "public", "development"))) |>
-  str_remove_all(thesis_stopwords(add_stopwords = c("advisor", "prof", "fig", "ure", "ning")))
+meta_sw <- find_meta_stopwords(emu)
+emu_sw <- urbanism_stopwords(
+    add_stopwords = c("emu", "european post[\\-]?(graduate)?[\\s]?master[s]? in urbanism",
+                      "tu delft", "ku leuven", "upc barcelona", "iuav venice"))
+thesis_sw <- thesis_stopwords(add_stopwords = c("advisor", "prof", "fig", "ure", "figure", "ning"))
+anonymisation_sw <- c("EMAIL_REMOVED", "AUTHOR_REMOVED", "FIRST_NAME_REMOVED", "LAST_NAME_REMOVED") |>
+  paste(collapse = "|")
+custom_sw <- c("space[s]?", "spatial", "plan", "(plann)\\w{0,}", "public", "development",
+               "design", "process[es]?", "project[s]?", "figure[s]?", "map[s]?", "strateg(y|ies)", "intervention[s]?",
+               "create", "exist", "analys(i|e)s") |>
+  (\(.) paste0("\\b", ., "\\b"))() |> 
+  paste(collapse = "|")
 
-# Unnest words and remove words of one and two letters
+# Add cleaned text column
+emu$text_clean <- emu$text_raw |> 
+  # Remove text included with anonymisation
+  str_remove_all(anonymisation_sw) |>
+  # Remove white spaces and punctuation, and change text to lower-case
+  clean_basic() |>
+  # Remove title, subtitle and full title
+  str_remove_all(meta_sw) |> 
+  # Remove dataset-specific words
+  str_remove_all(emu_sw) |>
+  # Remove thesis-specific words
+  str_remove_all(thesis_sw)
+
+# Concatenate ngrams
+emu$text_clean <- emu |> 
+  c_ngrams(n_max = 3, text_col = "text_clean",
+           title_col = "title", min_freq = 20, lemma = TRUE) 
+
+# Words that were not included in ngrams are safe to remove now
+emu$text_clean <- emu$text_clean |> 
+  str_remove_all(custom_sw)
+
+# # Get all concatenated ngrams
+# unique(unlist(str_match_all(emu$text_clean, "[A-Za-z]+(?:_[A-Za-z]+)+")[1]))
+
+# # Check if the word "space" was removed
+# unique(unlist(str_match_all(emu$text_clean, "\\bspace\\b")))
+# unique(unlist(str_match_all(emu$text_clean, "space(?:_[A-Za-z]+)+")))
+
+```
+
+
+
+```{r tokenise}
+
+# TODO Replace title column with ID column
+
+# Unnest tokens and remove words of one and two letters
 emu_words <- emu |> 
   select(title, text_clean) |> 
   unnest_tokens(output = word, input = text_clean) |>  # remove punctuation, convert to lower-case, separate all words
   anti_join(tidytext::stop_words, by = "word") |>  # remove stop words
-  mutate(word = textstem::lemmatize_words(word))  # lemmatise words
+  mutate(word = textstem::lemmatize_words(word)) |>  # lemmatise words
+  filter(nchar(word) >= 3)  # keep only words that are at least three letters long
+
+# # Check if concatenated ngrams are retained
+# unlist(str_match_all(emu_words$word, "[A-Za-z]+(?:_[A-Za-z]+)+"))
 ```
 
 Finally, additional checks were made to the document in search for previously undetected stop words. Short words of one and two letters could be safely removed, while three-letter words were kept, as many of those, including "map" and "low", were meaningful and occurring in high frequency.
